--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>My Portfolio</title>
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+			integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+			crossorigin="anonymous"
 		/>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
+			crossorigin
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+			crossorigin
+		></script>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+			crossorigin
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
